--- a/app/src/main/res/layout/item_vh_category.xml
+++ b/app/src/main/res/layout/item_vh_category.xml
@@ -14,7 +14,7 @@
     </data>
 
     <FrameLayout
-        holder="@{categoryVH}"
+        itemViewClick="@{categoryVH}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
