--- a/app/src/main/res/layout/item_recent_search.xml
+++ b/app/src/main/res/layout/item_recent_search.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="recentSearch"
-            type="com.example.project_myfit.data.model.RecentSearch" />
+            type="com.example.myfit.data.model.model.RecentSearch" />
     </data>
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageView
-            setRecentSearchIcon="@{recentSearch.word}"
+            setRecentSearchIcon="@{}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="@dimen/_6sdp"
@@ -56,7 +56,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iconDelete"
-                setCloseIcon="@{recentSearch.word}"
+                setCloseIcon="@{}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end"
