--- a/app/src/main/res/layout/item_vh_list_card_view.xml
+++ b/app/src/main/res/layout/item_vh_list_card_view.xml
@@ -109,8 +109,8 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iconDragHandle"
-                adapter="@{baseAdapter}"
-                holder="@{baseVH}"
+                dragHandleVisibility="@{baseAdapter}"
+                dragHandleTouch="@{baseVH}"
                 setDragHandle="@{}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
