BindingAdapter 속성 값 이름 변경

--- a/app/src/main/res/layout/item_vh_list_card_view.xml
+++ b/app/src/main/res/layout/item_vh_list_card_view.xml
@@ -34,7 +34,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardView"
-        adapter="@{baseAdapter}"
+        listActionMode="@{baseAdapter}"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_30sdp"
         android:layout_marginHorizontal="@dimen/_12sdp"
