visibility 관련 코드 제거

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,7 @@
         <include
             android:id="@+id/actionBar"
             layout="@layout/activity_main_action_bar"
-            app:activity="@{activity}"
-            app:model="@{model}" />
+            app:activity="@{activity}" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/host_fragment_main"
