--- a/app/src/main/res/layout/activity_main_action_bar.xml
+++ b/app/src/main/res/layout/activity_main_action_bar.xml
@@ -7,10 +7,6 @@
         <variable
             name="activity"
             type="com.example.myfit.ui.main.MainActivity" />
-
-        <variable
-            name="model"
-            type="com.example.myfit.ui.main.MainActivityViewModel" />
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
@@ -28,7 +24,6 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvCustomTitle"
-                setVisibility="@{model.destinationIdLive}"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -41,8 +36,7 @@
             <include
                 android:id="@+id/searchBar"
                 layout="@layout/activity_main_search_bar"
-                app:adapter="@{activity.autoCompleteAdapter}"
-                app:model="@{model}"/>
+                app:adapter="@{activity.autoCompleteAdapter}" />
 
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
