--- a/app/src/main/res/layout/item_tree_postfix.xml
+++ b/app/src/main/res/layout/item_tree_postfix.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:alpha="0.8"
-            android:onClick="@{() -> treeHolder.addIconClick()}"
+            android:onClick="@{() -> treeHolder.navigateAddFolderDialog()}"
             android:paddingStart="0dp"
             android:paddingEnd="@dimen/_16sdp"
             tools:src="@drawable/icon_add" />
