메소드 명 변경

--- a/app/src/main/res/layout/layout_dialog_tree.xml
+++ b/app/src/main/res/layout/layout_dialog_tree.xml
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:onClick="@{() -> model.addCategoryClick()}"
+                android:onClick="@{() -> model.navigateAddCategoryDialog()}"
                 android:layout_marginTop="@dimen/_8sdp"
                 android:layout_marginEnd="@dimen/_16sdp">
 
