--- a/app/src/main/res/layout/item_vh_folder_list.xml
+++ b/app/src/main/res/layout/item_vh_folder_list.xml
@@ -14,7 +14,8 @@
     </data>
 
     <FrameLayout
-        itemViewClick="@{folderListVH}"
+        android:onClick="@{() -> folderListVH.itemViewClick()}"
+        android:onLongClick="@{() -> folderListVH.itemViewLongClick()}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -25,9 +26,9 @@
         <include
             android:id="@+id/cardView"
             layout="@layout/item_vh_list_card_view"
-            app:alpha="@{0.8}"
             app:baseAdapter="@{baseAdapter}"
             app:baseVH="@{folderListVH}"
-            app:showFolderIcon="@{true}" />
+            app:alpha="@{0.8}"
+            app:tuple="@{folderListVH.tuple}" />
     </FrameLayout>
 </layout>
