bindingAdapter 제거, onTouchListener 추가

--- a/app/src/main/res/layout/item_recycler_view.xml
+++ b/app/src/main/res/layout/item_recycler_view.xml
@@ -17,7 +17,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
-            recyclerViewTouch="@{viewPagerVH}"
+            app:onTouchListener="@{(view, event) ->viewPagerVH.recyclerViewTouch(event)}"
             android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
