바인딩 어댑터 제거, onTouchListener 추가, 파일 명 변경

--- a/app/src/main/res/layout/item_vh_include_list_card_view.xml
+++ b/app/src/main/res/layout/item_vh_include_list_card_view.xml
@@ -102,7 +102,7 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/iconDragHandle"
-                android:onTouch="@{(view, event) -> baseVH.dragStart(view, event)}"
+                app:onTouchListener="@{(view, event) -> baseVH.dragStart(event)}"
                 dragHandleActionMode="@{baseAdapter}"
                 setDragHandle="@{}"
                 android:layout_width="wrap_content"
