바인딩 어댑터 제거, onClick 추가, 아이디 변경, 파일 명 변경

--- a/app/src/main/res/layout/item_vh_include_size_favorite_check_box.xml
+++ b/app/src/main/res/layout/item_vh_include_size_favorite_check_box.xml
@@ -9,8 +9,8 @@
     </data>
 
     <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/cbFavorite"
-        favoriteClick="@{sizeVH}"
+        android:id="@+id/cb"
+        android:onClick="@{() -> sizeVH.favoriteClick()}"
         android:layout_width="@dimen/_20sdp"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
