어댑터 타입 변경

--- a/app/src/main/res/layout/item_vh_include_size_favorite_check_box.xml
+++ b/app/src/main/res/layout/item_vh_include_size_favorite_check_box.xml
@@ -11,7 +11,7 @@
 
         <variable
             name="adapter"
-            type="com.example.myfit.ui.main.list.adapter.sizeadapter.BaseSizeAdapter" />
+            type="com.example.myfit.util.adapter.BaseAdapter" />
     </data>
 
     <com.google.android.material.checkbox.MaterialCheckBox
