페이보릿 체크박스 변수추가

--- a/app/src/main/res/layout/item_vh_size_list.xml
+++ b/app/src/main/res/layout/item_vh_size_list.xml
@@ -79,6 +79,7 @@
                 <include
                     android:id="@+id/cbFavorite"
                     layout="@layout/item_vh_include_size_favorite_check_box"
+                    app:adapter="@{baseAdapter}"
                     app:sizeVH="@{sizeListVH}" />
 
                 <androidx.appcompat.widget.AppCompatImageView
