--- a/app/src/main/res/layout/item_vh_size_grid.xml
+++ b/app/src/main/res/layout/item_vh_size_grid.xml
@@ -86,6 +86,7 @@
                     <include
                         android:id="@+id/cbFavorite"
                         layout="@layout/item_vh_include_size_favorite_check_box"
+                        app:adapter="@{baseAdapter}"
                         app:sizeVH="@{sizeGridVH}" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
