--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="activity"
-            type="com.example.myfit.ui.main.MainActivity" />
+            name="autoCompleteAdapter"
+            type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
 
         <variable
             name="model"
@@ -18,8 +18,6 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/root"
-        keyboardShowingListener="@{model}"
-        setContentView="@{activity}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.main.MainActivity">
@@ -27,7 +25,8 @@
         <include
             android:id="@+id/actionBar"
             layout="@layout/activity_main_action_bar"
-            app:activity="@{activity}" />
+            app:autoCompleteAdapter="@{autoCompleteAdapter}"
+            app:model="@{model}" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/host_fragment_main"
@@ -53,8 +52,7 @@
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/bottomNav"
-                alignBottomNavIcons="@{}"
-                removeBottomNavShadow="@{}"
+                app:backgroundTintList="@{null}"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_36sdp"
                 android:layout_gravity="bottom"
@@ -69,14 +67,13 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
-            change="@{model.destinationIdLive}"
             android:visibility="@{model.keyboardShowingLive ? View.INVISIBLE : View.VISIBLE}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_add"
             app:elevation="0dp"
             app:layout_anchor="@id/bottomAppBar"
             app:tint="?colorPrimary"
+            tools:src="@drawable/icon_add"
             tools:ignore="ContentDescription" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -87,7 +84,7 @@
             android:layout_marginEnd="@dimen/_16sdp"
             android:layout_marginBottom="@dimen/_48sdp"
             android:src="@drawable/icon_arrow_up"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:backgroundTint="@color/white"
             app:fabCustomSize="@dimen/_24sdp"
             tools:ignore="ContentDescription" />
