--- a/app/src/main/res/layout/activity_main_action_bar.xml
+++ b/app/src/main/res/layout/activity_main_action_bar.xml
@@ -5,8 +5,12 @@
     <data>
 
         <variable
-            name="activity"
-            type="com.example.myfit.ui.main.MainActivity" />
+            name="autoCompleteAdapter"
+            type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
+
+        <variable
+            name="model"
+            type="com.example.myfit.ui.main.MainActivityViewModel" />
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
@@ -17,7 +21,6 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolBar"
             app:layout_scrollFlags="scroll|enterAlways"
-            setSupportActionBar="@{activity}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:titleTextAppearance="@style/myActionBarTitleStyle">
@@ -36,7 +39,8 @@
             <include
                 android:id="@+id/searchBar"
                 layout="@layout/activity_main_search_bar"
-                app:adapter="@{activity.autoCompleteAdapter}" />
+                app:adapter="@{autoCompleteAdapter}"
+                app:model="@{model}" />
 
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
