activity 변수 삭제, autoFCompleteAdapter 변수 추가, 액비티비 로직 삭제

--- a/app/src/main/res/layout/activity_main_search_bar.xml
+++ b/app/src/main/res/layout/activity_main_search_bar.xml
@@ -4,8 +4,11 @@
 
     <data>
         <variable
-            name="adapter"
+            name="autoCompleteAdapter"
             type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
+        <variable
+            name="model"
+            type="com.example.myfit.ui.main.MainActivityViewModel" />
     </data>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -22,7 +25,7 @@
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/acTv"
-            app:adapter="@{adapter}"
+            app:adapter="@{autoCompleteAdapter}"
             setAutoCompleteItems="@{model.autoCompleteLive}"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_36sdp"
