--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
             type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
 
         <variable
-            name="model"
-            type="com.example.myfit.ui.main.MainActivityViewModel" />
+            name="keyboardShowingLive"
+            type="androidx.lifecycle.MutableLiveData" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -25,8 +25,7 @@
         <include
             android:id="@+id/actionBar"
             layout="@layout/activity_main_action_bar"
-            app:autoCompleteAdapter="@{autoCompleteAdapter}"
-            app:model="@{model}" />
+            app:autoCompleteAdapter="@{autoCompleteAdapter}" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/host_fragment_main"
@@ -43,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_36sdp"
             android:layout_gravity="bottom"
-            android:visibility="@{model.keyboardShowingLive ? View.INVISIBLE : View.VISIBLE}"
+            android:visibility="@{keyboardShowingLive ? View.INVISIBLE : View.VISIBLE}"
             app:backgroundTint="?colorPrimary"
             app:contentInsetStart="0dp"
             app:elevation="@dimen/_6sdp"
@@ -67,7 +66,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
-            android:visibility="@{model.keyboardShowingLive ? View.INVISIBLE : View.VISIBLE}"
+            android:visibility="@{keyboardShowingLive ? View.INVISIBLE : View.VISIBLE}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:elevation="0dp"
