--- a/app/src/main/res/layout/activity_main_action_bar.xml
+++ b/app/src/main/res/layout/activity_main_action_bar.xml
@@ -7,10 +7,6 @@
         <variable
             name="autoCompleteAdapter"
             type="com.example.myfit.ui.search.adapter.AutoCompleteAdapter" />
-
-        <variable
-            name="model"
-            type="com.example.myfit.ui.main.MainActivityViewModel" />
     </data>
 
     <com.google.android.material.appbar.AppBarLayout
@@ -39,8 +35,7 @@
             <include
                 android:id="@+id/searchBar"
                 layout="@layout/activity_main_search_bar"
-                app:adapter="@{autoCompleteAdapter}"
-                app:model="@{model}" />
+                app:adapter="@{autoCompleteAdapter}" />
 
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
